--- a/scale-demo/vegeta-deployment.yaml
+++ b/scale-demo/vegeta-deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: vegeta
 spec:
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
       - name: vegeta
-        image: gcr.io/google_containers/loader:0.6
+        image: gcr.io/google_containers/loader:0.5
         resources:
           requests:
             cpu: 100m
